--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: generic
-os: osx
+os: 
+-osx
 matrix:
   include:
-    - os: windows
     - os: linux
       env: COMPILER_NAME=gcc CXX=g++-5 CC=gcc-5
       addons:
@@ -12,13 +12,6 @@ matrix:
           sources: &sources
             - llvm-toolchain-precise-3.8
             - ubuntu-toolchain-r-test
-    - os: linux
-      env: COMPILER_NAME=clang CXX=clang++-3.8 CC=clang-3.8
-      addons:
-        apt:
-          packages:
-            - clang-3.8
-          sources: *sources
           script:
            - mkdir build
            - cd build
