--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ matrix:
           packages:
             - g++-5
           sources: &sources
-            - llvm-toolchain-precise-3.8
+            - llvm-toolchain-precise
             - ubuntu-toolchain-r-test
           script:
            - mkdir build
